test-suite/invalid/syntax/mixed-indentation.jyml
# Invalid: mixed tabs and spaces
"object":
  "key1": "value1"
	"key2": "value2"